[tool.poetry]
name = "nonebot-plugin-PicMenu"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^9.1.1"
nonebot = "^1.9.1"
nonebot-adapter-onebot = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
